--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>org.example.softfun_funsoft/org.example.softfun_funsoft.HelloApplication</mainClass>
+              <mainClass>org.example.softfun_funsoft/org.example.softfun_funsoft.MainMenuLauncher</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
