--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,14 @@
       <version>21</version> <!-- Update as per your Java version -->
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.controlsfx/controlsfx -->
+    <dependency>
+      <groupId>org.controlsfx</groupId>
+      <artifactId>controlsfx</artifactId>
+      <version>11.2.1</version>
+    </dependency>
+
+
     <dependency>
       <groupId>com.jfoenix</groupId>
       <artifactId>jfoenix</artifactId>
