--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,13 @@
     </dependency>
 
     <dependency>
+      <groupId>io.github.cdimascio</groupId>
+      <artifactId>dotenv-java</artifactId>
+      <version>2.2.0</version>
+    </dependency>
+
+
+    <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
       <version>21</version> <!-- Update as per your Java version -->
@@ -46,6 +53,13 @@
       <groupId>com.jfoenix</groupId>
       <artifactId>jfoenix</artifactId>
       <version>9.0.10</version> <!-- Replace with the correct version -->
+    </dependency>
+
+
+    <dependency>
+      <groupId>com.stripe</groupId>
+      <artifactId>stripe-java</artifactId>
+      <version>23.0.0</version> <!-- Use the latest version available -->
     </dependency>
 
     <dependency>
