--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
       <version>9.0.10</version> <!-- Replace with the correct version -->
     </dependency>
 
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20210307</version>
+    </dependency>
+
 
     <dependency>
       <groupId>com.stripe</groupId>
