--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
       <version>2.2.0</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-web -->
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-web</artifactId>
+      <version>23.0.1</version>
+    </dependency>
 
     <dependency>
       <groupId>org.openjfx</groupId>
